fixed scrollbar issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,13 +2,14 @@
 
 .content{
     min-height: 100vh;
+    overflow:hidden;
 }
 
 .header{
-    position: fixed;
+    position: relative;
+    z-index: 10;
     width: 100%;
-    z-index: 101;
-    height: 50px;
+    height: 60px;
 }
 
 .navbar{
@@ -31,7 +32,7 @@ Social Media Icons on the right
 ------------------
 */
 
-.socialMedia{
+/* .socialMedia{
     position: fixed;
     color: grey;
     z-index: 101;
@@ -72,4 +73,4 @@ Social Media Icons on the right
 
 .media:hover{
     transform: scale(1.3);
-}
+} */
