--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,10 +3,10 @@ nav{
     display: flex;
     background-color:var(--light-bg-red);
     align-items: center;
+    height: 60px;
 }
 
 .name{
-    margin:20px;
     color: var(--main-bg-white);
     font-family: 'Caveat', cursive;
     font-size: 1.6em;
