--- a/src/app/splash-screen/splash-screen.component.css
+++ b/src/app/splash-screen/splash-screen.component.css
@@ -5,6 +5,7 @@
     width: 100%;
     display: grid;
     place-items: center;
+    text-align: center;
 }
 
 .splash{
